fixing spacing

--- a/css/nadine.css
+++ b/css/nadine.css
@@ -23,9 +23,11 @@
 	width: 13%;
 	margin-bottom: -10%;
 }
+
 #nav-container {
 	background-color: white;
 }
+
 .nav-link {
 	margin-left: 12%;
    font-family: "futura-pt";
@@ -147,8 +149,6 @@ h2{
   color: black;
 }
 
-
-
 p{
   font-family: "futura-pt";
   font-size: 23px;
@@ -161,15 +161,13 @@ p{
   color:  white;
 }
 
-a{
+a {
   color:#214ba0;
 }
 
-
-
 /* BUTTON */
 
-h3{
+h3 {
     font-family: "futura-pt";
     text-transform: uppercase;
     font-weight: 600;
@@ -178,7 +176,6 @@ h3{
     color: black;
    
 }
-
 
 .btn{
   border-color: black;
@@ -197,9 +194,6 @@ h3{
 .btn:hover h3{
   color: white;
 }
-
-
-
 
 /* FORM */
 
@@ -221,212 +215,166 @@ textarea:focus{
 }
 
 
-
-
-
-
-
-
 @media screen and (min-width: 901px) and (max-width: 1024px)  {
 
-.hero
-  { height: 560px;
-   background-color:#efeee7;
-   padding: 8% 10% 2% 10%;
+	.hero { 
+		height: 560px;
+		background-color:#efeee7;
+		padding: 8% 10% 2% 10%;
+	}
+
+	#block {
+		height: 160px;
+		width: 100%;
+	}
+
+	#big {
+		height: inherit;
+	}
+
+	#big-2 {
+		height: 600px;
+	}
+
+	#big-3 {
+		height: 650px;
+	}
+
+	h1 { 
+		font-size: 65px;
+		line-height: 75px;
+	}
+
+	h2 {
+		font-size: 25px;
+		line-height: 30px;
+	}
+
+	p {
+		font-size: 17px;
+	}
+
+	textarea {
+	  height: 50px;
+	}
+
+	#big-2 .btn h3 {
+		font-size: 10px;
+		letter-spacing: .2em;
+	}
+	
+	.block-beige img {
+		background-color: #efeee7;
+	}
+	
 }
 
-#block
-{
-  height: 160px;
-  width: 100%;
-}
+@media screen and (min-width: 600px) and (max-width: 900px) {
 
-#big{
-  height: 700px;
-}
+	.hero { 
+		height: 750px;
+	}
 
-#big-2{
-  height: 600px;
-}
+	.hero .col-xs-6 #Layer_1 {
+		height: 100%;
+		margin-top: 5%;
+	}
 
-#big-3{
-  height: 650px;
-}
+	.hero .col-xs-6 {
+		padding-left:0px;
+		padding-right: 0px;
+		width: 100%
+	}
 
-h1{ 
-    font-size: 65px;
-    line-height: 75px;
+	#block {
+		height: 170px;
+		width: 100%;
+	}
 
-}
+	#big {
+		height: 1300px;
+	}
 
+	#big-2 {
+		height: 750px;
+	}
 
-h2{
-  font-size: 25px;
-  line-height: 30px;
-}
+	#big-2 .col-xs-6 {
+		width: 100%
+	}
 
+	#big-3 {
+		height: 1100px;
+	}
 
+	#big-3 .col-xs-6 {
+	  width: 100%;
+	  padding-left:0px;
+	  padding-right: 0px;
+	}
 
+	.col-md-4 #Layer_1 {
+	  height: 180px;
+	  display: block;
+	  align-content: center;
+	  float: none;
+	  margin-right: auto;
+	  margin-left: auto;
+	  margin-top: 15%;
+	}
 
-p{
+	h1 {
+		font-size: 55px;
+		line-height: 65px;
 
-  font-size: 17px;
+	}
 
-}
+	h2 {
+	  font-size: 25px;
+	  line-height: 30px;
+	}
 
+	h3 {
+		font-size: 13px;
+		letter-spacing: .2em;
+	}
 
-textarea{
-  height: 50px;
-}
+	p {
+		font-size: 14px;
+	}
 
+	.btn {
+	  width: 100%;
 
+	}
 
-#big-2 .btn h3{
-  font-size: 10px;
-  letter-spacing: .2em;
-}
+	input {
+	  width: 100%;
+	}
 
-
-}
-
-
-@media screen and (min-width: 600px) and (max-width: 900px)  {
-
-.hero
-{ 
-  height: 750px;
-}
-
-.hero .col-xs-6 #Layer_1
-{
-  height: 100%;
-  margin-top: 5%;
-}
-
-.hero .col-xs-6 
-{
-  padding-left:0px;
-  padding-right: 0px;
-  width: 100%
-}
-
-#block
-{
-  height: 170px;
-  width: 100%;
-}
-
-#big
-{
-  height: 1300px;
-}
-
-
-#big-2
-{
-  height: 750px;
-}
-
-#big-2 .col-xs-6 
-{
-  width: 100%
-}
-
-#big-3
-{
-  height: 1100px;
-}
-
-#big-3 .col-xs-6 
-{
-  width: 100%;
-  padding-left:0px;
-  padding-right: 0px;
-}
-
-
-
-
-.col-md-4 #Layer_1
-{
-  height: 180px;
-  display: block;
-  align-content: center;
-  float: none;
-  margin-right: auto;
-  margin-left: auto;
-  margin-top: 15%;
-}
-
-
-
-h1{ 
-   
-    font-size: 55px;
-    line-height: 65px;
+	textarea {
+	  width: 100%;
+	  height: 60px;
+	}
 
 }
-
-h2{
-  font-size: 25px;
-  line-height: 30px;
-}
-
-h3{
-
-    font-size: 13px;
-    letter-spacing: .2em;
-}
-
-p{
-
-  font-size: 14px;
-}
-
-
-
-.btn {
-  width: 100%;
-
-}
-
-input{
-  width: 100%;
-}
-
-textarea{
-  width: 100%;
-  height: 60px;
-}
-
-  }
-
-
-
-
-
-
-
-
 
 @media screen and (min-width: 481px) and (max-width: 599px)  {
 
-  .hero
-  { 
+  .hero { 
     height: 350px;
   }
 
-  .hero .col-xs-6 
-  {
+  .hero .col-xs-6 {
     padding-left:0px;
     padding-right: 0px;
     width: 100%
   }
 
-  .hero .col-xs-6 #Layer_1{
-  height: 100%;
-  margin-top: 5%;
-  }
+	.hero .col-xs-6 #Layer_1 {
+		height: 100%;
+		margin-top: 5%;
+	}
 
 
   #big
@@ -493,9 +441,6 @@ textarea{
     margin-top: 15%;
   }
 
-
-
-
   h1
   { 
      
@@ -538,130 +483,121 @@ textarea{
     height: 60px;
   }
 
- }
-
-
-
-
-
-
-
-
+}
 
 @media screen and (min-width: 320px) and (max-width: 480px)  {
 
+	.hero
+	  { height: 450px;
+	   background-color:#efeee7;
+	   padding: 8% 10% 2% 10%;
+	}
 
-.hero
-  { height: 450px;
-   background-color:#efeee7;
-   padding: 8% 10% 2% 10%;
-}
+	.hero .col-xs-6 #Layer_1{
+	  height: 100%;
+	  margin-top: 5%;
+	}
 
-.hero .col-xs-6 #Layer_1{
-  height: 100%;
-  margin-top: 5%;
-}
+	.hero .col-xs-6 {
+	  padding-left:0px;
+	  padding-right: 0px;
+	  width: 100%
+	}
 
-.hero .col-xs-6 {
-  padding-left:0px;
-  padding-right: 0px;
-  width: 100%
-}
-
-#big{
-  height: 1000px;
-}
-
-
-#big-2{
-  height: 550px;
-}
-
-#big-2 .col-xs-6 {
-  width: 100%
-}
+	#big{
+	  height: 1000px;
+	}
 
 
-#big-3{
-  height: 700px;
-}
+	#big-2{
+	  height: 550px;
+	}
 
-#big-3 .col-xs-6 {
-  width: 100%;
-  padding-left:0px;
-  padding-right: 0px;
-}
+	#big-2 .col-xs-6 {
+	  width: 100%
+	}
 
-#block{
-  height: 100px;
-  width: 100%;
-  }
 
-.block-black{
-  background-color: black;
-  height: 100px;
+	#big-3{
+	  height: 700px;
+	}
+
+	#big-3 .col-xs-6 {
+	  width: 100%;
+	  padding-left:0px;
+	  padding-right: 0px;
+	}
+
+	#block{
+	  height: 100px;
+	  width: 100%;
+	  }
+
+	.block-black{
+	  background-color: black;
+	  height: 100px;
  
-}
+	}
 
-.block-white{
-  background-color: white;
-  height: 100px;
-}
+	.block-white{
+	  background-color: white;
+	  height: 100px;
+	}
 
-.col-md-4 #Layer_1{
-  height: 180px;
-  display: block;
-  align-content: center;
-  float: none;
-  margin-right: auto;
-  margin-left: auto;
-  margin-top: 15%;
-}
+	.col-md-4 #Layer_1{
+	  height: 180px;
+	  display: block;
+	  align-content: center;
+	  float: none;
+	  margin-right: auto;
+	  margin-left: auto;
+	  margin-top: 15%;
+	}
 
 
 
-h1{ 
+	h1{ 
    
-    font-size: 30px;
-    line-height: 40px;
+	    font-size: 30px;
+	    line-height: 40px;
 
-}
+	}
 
-h2{
-  font-size: 15px;
-  line-height: 20px;
-}
+	h2{
+	  font-size: 15px;
+	  line-height: 20px;
+	}
 
-h3{
+	h3{
 
-    font-size: 12px;
-    letter-spacing: .1em;
+	    font-size: 12px;
+	    letter-spacing: .1em;
 
    
+	}
+
+	p{
+
+	  font-size: 12px;
+	}
+
+
+
+	.btn {
+	  width: 100%;
+
+	}
+
+	input{
+	  width: 100%;
+	}
+
+	textarea{
+	  width: 100%;
+	  height: 60px;
+	}
+
 }
-
-p{
-
-  font-size: 12px;
-}
-
-
-
-.btn {
-  width: 100%;
-
-}
-
-input{
-  width: 100%;
-}
-
-textarea{
-  width: 100%;
-  height: 60px;
-}
-
-  }
 
 
 
